# Cryptocurrency_with_ai

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.web  Makefile  Procfile  docker-compose.yml  env.example  main.py  pyproject.toml  railway.toml  readme.md  requirements.txt  vercel.json  webapp.py
app/: __init__.py
app/api/: routes.py
app/core/: symbols.py
app/infrastructure/: decision_parser.py  storage.py
app/services/: journal.py  market_data.py
app/workflows/: trading.py
apps/web/: .eslintrc.js  .gitignore  next.config.mjs  package.json  tsconfig.json
crypto_bot/config/: logging.py
crypto_bot/integrations/: bybit.py
crypto_bot/llm/: provider.py
crypto_bot/workflows/: trading.py
data/: trades.xlsx
deploy/: Dockerfile.backend  Dockerfile.scheduler  Dockerfile.web  webserver.py
deploy/supabase/: init.sql
docker/: Dockerfile.scheduler
docs/: architecture.md  deployment.md  vercel-env.md
mcp-server/: dockerfile  env.sample  main.py  pyproject.toml
mcp-server/apps/: setup.py
mcp-server/apps/agents/: __init__.py
mcp-server/apps/utils/: ccxt_config.py  db_connection.py
scripts/: supabase-start.sh
src/crypto_bot/: __init__.py
static/: app.js  dashboard.css  overlay.css  overlay.js  overlay_positions.js  style.css
templates/: index.html  overlay.html  overlay_positions.html
utils/: ai_provider.py  bybit_utils.py  function.py  price_utils.py  risk.py  storage.py
web/: package.json  pnpm-lock.yaml
web/app/: layout.tsx
web/components/common/: Badge.tsx  (+6 more)
web/lib/: api.ts  format.ts  types.ts
(+27 files in other folders)
