[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-bot"
version = "2.0.0"
description = "Automated cryptocurrency trading assistant with OpenAI-driven decision loops."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Crypto Bot Team"}
]
dependencies = [
    "ccxt==4.4.51",
    "python-dotenv==1.0.1",
    "schedule==1.2.2",
    "pytz==2024.2",
    "pandas==2.2.3",
    "numpy==2.2.2",
    "matplotlib==3.10.0",
    "mplfinance==0.12.10b0",
    "ta==0.11.0",
    "SQLAlchemy==2.0.36",
    "pymysql==1.1.1",
    "openpyxl==3.1.5",
    "openai==1.57.4",
    "supabase==2.22.4",
    "pydantic==2.10.6",
    "typing-extensions==4.12.2",
    "requests==2.32.3",
    "tqdm==4.67.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = "crypto_bot"

